--- a/Train Finder/Train Finder/ViewControllers/TFLandingViewController.xib
+++ b/Train Finder/Train Finder/ViewControllers/TFLandingViewController.xib
@@ -15,7 +15,6 @@
                 <outlet property="errorMessageLabel" destination="zYz-U0-8rw" id="a4a-Q8-7jP"/>
                 <outlet property="errorView" destination="X32-cY-Wfg" id="Y13-uL-e83"/>
                 <outlet property="loader" destination="6s5-wO-YSf" id="nEw-Le-HAK"/>
-                <outlet property="searchBar" destination="hNx-be-HmW" id="fNz-P7-Hkj"/>
                 <outlet property="tableView" destination="dpz-VP-rGQ" id="V8I-YJ-b85"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -27,9 +26,25 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pBY-8X-htd">
                     <rect key="frame" x="0.0" y="44" width="414" height="128"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="128" id="1Vz-jr-e5Z"/>
+                    </constraints>
+                </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dpz-VP-rGQ">
+                    <rect key="frame" x="0.0" y="192" width="414" height="670"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="6s5-wO-YSf">
+                    <rect key="frame" x="0.0" y="192" width="414" height="670"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="color" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </activityIndicatorView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X32-cY-Wfg">
+                    <rect key="frame" x="0.0" y="192" width="414" height="670"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your location or let us use your location to locate stations nearby to you" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GLn-kt-Zbz">
-                            <rect key="frame" x="8" y="8" width="398" height="41"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zYz-U0-8rw">
+                            <rect key="frame" x="186" y="324.5" width="42" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -37,51 +52,28 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="128" id="1Vz-jr-e5Z"/>
-                        <constraint firstItem="GLn-kt-Zbz" firstAttribute="leading" secondItem="pBY-8X-htd" secondAttribute="leading" constant="8" id="YSx-rj-Zdo"/>
-                        <constraint firstItem="GLn-kt-Zbz" firstAttribute="top" secondItem="pBY-8X-htd" secondAttribute="top" constant="8" id="nQm-S4-cqa"/>
-                        <constraint firstAttribute="trailing" secondItem="GLn-kt-Zbz" secondAttribute="trailing" constant="8" id="oFD-Hb-7Ke"/>
+                        <constraint firstItem="zYz-U0-8rw" firstAttribute="centerX" secondItem="X32-cY-Wfg" secondAttribute="centerX" id="Co1-Ze-PQl"/>
+                        <constraint firstItem="zYz-U0-8rw" firstAttribute="centerY" secondItem="X32-cY-Wfg" secondAttribute="centerY" id="mwu-Ie-RdQ"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dpz-VP-rGQ">
-                    <rect key="frame" x="0.0" y="248" width="414" height="614"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </tableView>
-                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="6s5-wO-YSf">
-                    <rect key="frame" x="170" y="418" width="37" height="37"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <color key="color" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </activityIndicatorView>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="X32-cY-Wfg">
-                    <rect key="frame" x="68" y="500" width="240" height="128"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zYz-U0-8rw">
-                            <rect key="frame" x="118" y="71" width="42" height="21"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </view>
-                <searchBar contentMode="redraw" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hNx-be-HmW">
-                    <rect key="frame" x="0.0" y="172" width="414" height="56"/>
-                    <textInputTraits key="textInputTraits"/>
-                </searchBar>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="pBY-8X-htd" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="9MJ-yH-pLu"/>
-                <constraint firstItem="dpz-VP-rGQ" firstAttribute="top" secondItem="hNx-be-HmW" secondAttribute="bottom" constant="20" id="F2Z-54-l3L"/>
+                <constraint firstItem="6s5-wO-YSf" firstAttribute="trailing" secondItem="dpz-VP-rGQ" secondAttribute="trailing" id="EOx-rL-EVb"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="dpz-VP-rGQ" secondAttribute="bottom" id="FCA-hF-cVy"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="dpz-VP-rGQ" secondAttribute="trailing" id="Jo1-Ac-tJf"/>
+                <constraint firstItem="6s5-wO-YSf" firstAttribute="bottom" secondItem="dpz-VP-rGQ" secondAttribute="bottom" id="O5V-iI-Ydg"/>
                 <constraint firstItem="pBY-8X-htd" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="YDV-Xn-X4U"/>
-                <constraint firstItem="hNx-be-HmW" firstAttribute="top" secondItem="pBY-8X-htd" secondAttribute="bottom" id="eRn-Fd-lQI"/>
+                <constraint firstItem="dpz-VP-rGQ" firstAttribute="top" secondItem="pBY-8X-htd" secondAttribute="bottom" constant="20" id="aPY-uQ-ngk"/>
+                <constraint firstItem="6s5-wO-YSf" firstAttribute="leading" secondItem="dpz-VP-rGQ" secondAttribute="leading" id="ap9-8t-ieU"/>
+                <constraint firstItem="X32-cY-Wfg" firstAttribute="bottom" secondItem="dpz-VP-rGQ" secondAttribute="bottom" id="b6R-oo-kdm"/>
+                <constraint firstItem="6s5-wO-YSf" firstAttribute="top" secondItem="dpz-VP-rGQ" secondAttribute="top" id="hpH-Vq-LOu"/>
+                <constraint firstItem="X32-cY-Wfg" firstAttribute="leading" secondItem="dpz-VP-rGQ" secondAttribute="leading" id="k0W-mj-dUX"/>
+                <constraint firstItem="X32-cY-Wfg" firstAttribute="trailing" secondItem="dpz-VP-rGQ" secondAttribute="trailing" id="xHo-qA-DZl"/>
                 <constraint firstItem="pBY-8X-htd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="xn4-ye-0kz"/>
                 <constraint firstItem="dpz-VP-rGQ" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="yY9-CW-EjA"/>
+                <constraint firstItem="X32-cY-Wfg" firstAttribute="top" secondItem="dpz-VP-rGQ" secondAttribute="top" id="zcv-6d-APv"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="47.826086956521742" y="35.491071428571423"/>
