--- a/Train Finder/Train Finder/ViewControllers/Landing/TFLandingViewController.xib
+++ b/Train Finder/Train Finder/ViewControllers/Landing/TFLandingViewController.xib
@@ -38,7 +38,7 @@
                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="6s5-wO-YSf">
                     <rect key="frame" x="0.0" y="86" width="414" height="776"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <color key="color" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="color" name="systemPurpleColor" catalog="System" colorSpace="catalog"/>
                 </activityIndicatorView>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X32-cY-Wfg">
                     <rect key="frame" x="0.0" y="86" width="414" height="776"/>
