--- a/Train Finder/Train Finder/ViewControllers/Cells/TFStationCell.xib
+++ b/Train Finder/Train Finder/ViewControllers/Cells/TFStationCell.xib
@@ -27,7 +27,7 @@
                     </label>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="dAB-2M-44p">
                         <rect key="frame" x="12" y="36.5" width="341" height="132"/>
-                        <color key="backgroundColor" name="systemPurpleColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="132" id="Eu9-lw-vMj"/>
                         </constraints>
