--- a/Train Finder/Train Finder/ViewControllers/Cells/CategoryCell.xib
+++ b/Train Finder/Train Finder/ViewControllers/Cells/CategoryCell.xib
@@ -26,13 +26,13 @@
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="750" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XwW-fh-pLq">
                                         <rect key="frame" x="2" y="0.0" width="39.5" height="29"/>
-                                        <color key="backgroundColor" name="systemYellowColor" catalog="System" colorSpace="catalog"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" name="systemYellowColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="XwW-fh-pLq" firstAttribute="leading" secondItem="DTj-rU-Ajn" secondAttribute="leading" constant="2" id="2aG-HK-tuL"/>
                                     <constraint firstItem="XwW-fh-pLq" firstAttribute="top" secondItem="DTj-rU-Ajn" secondAttribute="top" id="a4V-bc-0ZO"/>
@@ -41,7 +41,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" name="systemPurpleColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="DTj-rU-Ajn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="qvC-Od-y5F" secondAttribute="leading" constant="4" id="6K1-VE-xPn"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="DTj-rU-Ajn" secondAttribute="trailing" constant="4" id="Enn-sY-EaF"/>
